tp3_ingress/example-ingress-2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-2
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.example
    http:
      paths:
      - backend:
          service:
            name: web2
            port:
              number: 8080
        path: /v2
        pathType: Prefix
